# imessage-rs

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md
crates/imessage-apple/: Cargo.toml
crates/imessage-apple/src/: actions.rs  lib.rs  process.rs  scripts.rs
crates/imessage-core/: Cargo.toml
crates/imessage-core/src/: config.rs  dates.rs  events.rs  formatting.rs  lib.rs  macos.rs  phone.rs  typedstream.rs  utils.rs
crates/imessage-db/: Cargo.toml
crates/imessage-db/src/: lib.rs  notification_center.rs
crates/imessage-db/src/imessage/: columns.rs  entities.rs  mod.rs  repository.rs  row_reader.rs  transformers.rs  types.rs
crates/imessage-db/tests/: live_chatdb.rs
crates/imessage-http/: Cargo.toml
crates/imessage-http/src/: awaiter.rs  extractors.rs  facetime_session.rs  lib.rs  middleware.rs  path_safety.rs  routes.rs  server.rs  state.rs  validators.rs
crates/imessage-http/src/middleware/: auth.rs  error.rs  pretty.rs
crates/imessage-http/src/routes/: attachment.rs  chat.rs  facetime.rs  general.rs  handle.rs  icloud.rs  message.rs  server.rs  webhook.rs
crates/imessage-private-api/: Cargo.toml  build.rs
crates/imessage-private-api/src/: actions.rs  events.rs  injection.rs  lib.rs  service.rs  transaction.rs
crates/imessage-private-api/swift/: Makefile  Package.swift
crates/imessage-private-api/swift/Sources/IMHelper/: AccountActions.swift  AttachmentActions.swift  ChatActions.swift  DylibEntry.swift  FaceTimeActions.swift  FindMyActions.swift  IMHelper.swift  MessageActions.swift  PrivateAPI.swift  PrivateSymbols.swift  Swizzles.swift  TCPClient.swift
crates/imessage-private-api/swift/Tests/IMHelperTests/: ReactionParsingTests.swift  TCPClientTests.swift  TextFormattingTests.swift
crates/imessage-serializers/: Cargo.toml
crates/imessage-serializers/src/: attachment.rs  chat.rs  config.rs  handle.rs  lib.rs  message.rs  plist_decode.rs
crates/imessage-watcher/: Cargo.toml
crates/imessage-watcher/src/: lib.rs  listener.rs  pollers.rs
crates/imessage-webhooks/: Cargo.toml
crates/imessage-webhooks/src/: event_cache.rs  lib.rs  service.rs
src/: config.rs  main.rs  process.rs
tests/: e2e.rs
