[package]
name = "imessage-db"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "../../README.md"
description = "Read-only rusqlite access layer for the macOS iMessage chat.db schema."
documentation = "https://docs.rs/imessage-db"
keywords = ["imessage", "sqlite", "macos", "database", "chatdb"]
categories = ["database", "api-bindings"]

[dependencies]
imessage-core = { workspace = true }
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
plist = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
