[package]
name = "imessage-webhooks"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "../../README.md"
description = "Webhook dispatch and event deduplication service for imessage-rs."
documentation = "https://docs.rs/imessage-webhooks"
keywords = ["imessage", "webhook", "events", "http", "macos"]
categories = ["web-programming::http-client", "asynchronous"]

[dependencies]
imessage-core = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
